--- a/index.html
+++ b/index.html
@@ -623,7 +623,9 @@
             <div class="trade_on__content">
                 <span class="heading s1-color fs-five mb-5">SWIFTLY PASS</span>
                 <h3 class="mb-4 mb-lg-5">Prop Firm Challenge</h3>
-                <a href="signup.html" class="cmn-btn secondary-alt fs-six-up nb4-xxl-bg gap-2 gap-lg-3 align-items-center py-2 px-5 py-lg-3 px-lg-6 mt-7 mt-xxl-8" style="font-size: 13px;">Hurry Register now to pass your different Prop firm Account! <i class="ti ti-arrow-right fs-four"></i></a>
+                <a href="javascript:void(0)" >
+                    Hurry Register now to pass your different Prop firm Account!
+                </a>
                 <br>
                 <br>
                 <p class="fs-six mx-ch">Trading in financial markets involves a wide range of strategies that traders employ to make informed decisions. From trading to swing trading and long-term investing, each strategy has its own set of principles and risk factors.</p>  
